[package]
name = "waveflow-syncedlyrics"
version = "1.4.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/InstaZDLL/WaveFlow"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
