[package]
name = "waveflow-syncedlyrics"
version = "1.4.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/InstaZDLL/WaveFlow"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# URL parsing for redirect host pinning + outbound href validation.
# Already in the transitive tree via reqwest, but we depend on it
# explicitly so a future minor reqwest bump that swaps url for
# something else doesn't silently break our SSRF guards.
url = "2"

[dev-dependencies]
# `#[tokio::test]` async harness for the Musixmatch token-redaction
# tests (GH #234). `rt` + `macros` are the minimal set needed for the
# attribute to expand and the runtime to spin up on demand.
tokio = { version = "1", features = ["rt", "macros"] }
